app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trypuoyy-react-hello-world-svc
spec:
  selector:
    app: trypuoyy-react-hello-world
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
